@@ -20,6 +20,9 @@ NEW FEATURES
 	dropping them to a vector whilst preserving names.
 
     o	df() with one infinite df now works (to match pf()).
+	
+    o	Added tclServiceMode() function to the tcltk package to allow
+    	updating to be suspended.
 
     o	The Encoding: field of a DESCRIPTION file is now documented,
 	and used by packageDescription() and library(help=).
